--- a/README
+++ b/README
@@ -4,3 +4,5 @@ This is some solutions which are written by python code for book Introduction to
 1. 插入排序     insert_sort.py
 2. 归并排序     merge_sort.py
 3. 堆排序       heap_sort.py
+4.最大子数组    max_subarray.py
+5.随机排列      random_permute.py
