--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 This is some solutions which are written by python code for book Introduction to Algorithms
 
-排序算法
-1. 插入排序     insert_sort.py
-2. 归并排序     merge_sort.py
-3. 堆排序       heap_sort.py
-4. 计数排序     count_sort.py
-5. 随机排列     random_permute.py
-6. 最大子数组   max_subarray.py
+算法
+插入排序     insert_sort.py
+归并排序     merge_sort.py
+堆排序       heap_sort.py
+计数排序     count_sort.py
+桶排序       bucket_sort.py 
+随机排列     random_permute.py
+最大子数组   max_subarray.py
