--- a/README
+++ b/README
@@ -9,3 +9,4 @@ This is some solutions which are written by python code for book Introduction to
 随机排列     random_permute.py
 最大子数组   max_subarray.py
 选择算法     randomized_select.py
+栈和队列     stack_queue.py
