open addrss hash

--- a/README
+++ b/README
@@ -10,4 +10,5 @@ This is some solutions which are written by python code for book Introduction to
 最大子数组   max_subarray.py
 选择算法     randomized_select.py
 栈和队列     stack_queue.py
-双向链表     doubly_linked_list.py 
+双向链表     doubly_linked_list.py
+开发寻址法	 open_addressing_hash.py
