--- a/README
+++ b/README
@@ -12,3 +12,4 @@ This is some solutions which are written by python code for book Introduction to
 栈和队列     stack_queue.py
 双向链表     doubly_linked_list.py
 开放寻址法   open_addressing_hash.py
+二叉搜索树   binary_search_tree.py
