--- a/README
+++ b/README
@@ -13,3 +13,4 @@ This is some solutions which are written by python code for book Introduction to
 双向链表     doubly_linked_list.py
 开放寻址法   open_addressing_hash.py
 二叉搜索树   binary_search_tree.py
+红黑树       red_black_tree.py
