--- a/README
+++ b/README
@@ -17,3 +17,4 @@ This is some solutions which are written by python code for book Introduction to
 动态规划（钢条切割最大收益）  dynamic.py
 赫夫曼树     huffman_tree.py
 B树          BTree.py
+图的遍历     graph.py
