--- a/README
+++ b/README
@@ -19,4 +19,6 @@ This is some solutions which are written by python code for book Introduction to
 B树          BTree.py
 图的遍历     graph.py
 最小树生成   Prim.py   Kruskal.py
-最短路径     Bellman_ford.py
+最短路径     Bellman_ford.py   Dijkstra.py
+求两个字符串的编辑距离       Edit_distance.py
+
