--- a/README
+++ b/README
@@ -23,3 +23,5 @@ B树          BTree.py
 求两个字符串的编辑距离       Edit_distance.py
 graph图，节点之间的最短距离  Floyd_warshall.py
 两个字符串的最大子字符串     common_substring.py
+判断一个链表是否有环         list_circle.py
+将数字字符串转成整数         string_to_int.py
