--- a/README
+++ b/README
@@ -26,3 +26,4 @@ graph图，节点之间的最短距离  Floyd_warshall.py
 判断一个链表是否有环         list_circle.py
 将数字字符串转成整数         string_to_int.py
 走台阶问题                   step_question.py
+计算回文字符串               palindrome.py
